--- a/templates/player.html
+++ b/templates/player.html
@@ -7,8 +7,31 @@
 </head>
  
 <body>
+    <table>
+		<tr>
+		  <th>playerName</th>
+		  <th>position</th>
+		  <th>age</th>
+		  <th>leauge</th>
+		  <th>experince</th>
+		  <th>teamID</th>
+		  <th>seasonID</th>
+          <th>id</th>
+		</tr>
+		<tr>
+		  <td>{{ Player.playerName }}</td>
+		  <td>{{ Player.age }}</td>
+		  <td>{{ Player.leauge }}</td>
+		  <td>{{ Player.experince }}</td>
+		  <td>{{ Player.teamID }}</td>
+		  <td>{{ Player.seasonID }}</td>
+          <td>{{ Player.id }}</td>
+        
+
+		</tr>
+	
+	  </table>
     <!-- data -->
-    <h3>Player, {{Player}}</h3>
 </body>
  
 </html>
