--- a/templates/teams.html
+++ b/templates/teams.html
@@ -7,8 +7,39 @@
 </head>
  
 <body>
+    
+   <table>
+		  <tr>
+		    <th>teamName</th>
+		    <th>playOff</th>
+		    <th>numOfGames</th>
+		    <th>matchPoints</th>
+		    <th>fieldGoals</th>
+		    <th>percentageFG</th>
+		    <th>seasonID</th>
+      <th>id</th>
+		  </tr>
+		 {% for  team in  teams %}
+ <a href="http://127.0.0.1:5000/api/team/get/{{ team.id }}">
+    
+		  <tr>
+		    <td>{{ team.teamName }}</td>
+		    <td>{{ team.playOff }}</td>
+		    <td>{{ team.numOfGames }}</td>
+		    <td>{{ team.matchPoints }}</td>
+		    <td>{{ team.fieldGoals }}</td>
+		    <td>{{ team.percentageFG }}</td>
+		    <td>{{ team.seasonID }}</td>
+      <td>{{ team.id }}</td>
+		  </tr>
+  
+ </a>
+		 {% endfor %}
+	 </table>
+ <h3>teams, {{teams}}</h3>
+ 
     <!-- data -->
-    <h3>Teams, {{Teams}}</h3>
+    
 </body>
  
 </html>
