--- a/templates/game.html
+++ b/templates/game.html
@@ -7,8 +7,32 @@
 </head>
  
 <body>
+
+    <table>
+		<tr>
+		  <th>gameDate</th>
+		  <th>gameStatus</th>
+		  <th>homeTeamPoints</th>
+		  <th>percentageFG</th>
+		  <th>percentageFT</th>
+		  <th>homeTeamID</th>
+		  <th>visitorTeamID</th>
+          <th>id</th>
+		</tr>
+		<tr>
+		  <td>{{ game.gameDate }}</td>
+		  <td>{{ game.gameStatus }}</td>
+		  <td>{{ game.homeTeamPoints }}</td>
+		  <td>{{ game.percentageFG }}</td>
+		  <td>{{ game.percentageFT }}</td>
+		  <td>{{ game.homeTeamID }}</td>
+		  <td>{{ game.visitorTeamID }}</td>
+          <td>{{ game.id }}</td>
+		</tr>
+	</table>
+
     <!-- data -->
-    <h3>Game, {{Game}}</h3>
+    
 </body>
  
 </html>
