--- a/templates/teams.html
+++ b/templates/teams.html
@@ -7,8 +7,32 @@
 </head>
  
 <body>
-    <!-- data -->
-    <h3>Teams, {{Teams}}</h3>
+    <table>
+		<tr>
+		  <th>teamName</th>
+		  <th>playOff</th>
+		  <th>numOfGames</th>
+		  <th>matchPoints</th>
+		  <th>fieldGoals</th>
+		  <th>percentageFG</th>
+		  <th>seasonID</th>
+		  <th>id</th>
+
+		</tr>
+		{% for  team in  Teams %}
+        <tr>
+		  <td><a href="http://127.0.0.1:5000/api/player/get/team/{{team.abbreviation}}">{{ team.teamName }}</a></td>
+		  <td>{{ team.playOff }}</td>
+		  <td>{{ team.numOfGames }}</td>
+		  <td>{{ team.matchPoints }}</td>
+		  <td>{{ team.fieldGoals }}</td>
+		  <td>{{ team.percentageFG }}</td>
+		  <td>{{ team.seasonID }}</td>
+		  <td>{{ team.id }}</td>
+		</tr>
+        
+		{% endfor %}
+	  </table>
 </body>
  
 </html>
