--- a/templates/login.html
+++ b/templates/login.html
@@ -10,11 +10,13 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-
+<div > 
+	<p class="welcome">WELCOME TO NBA DATABASE</p>
+</div>
 	<div id="login-form-wrap">
 		
 	<h2>Sign In</h2>
-	<form id="login-form" action="{{ url_for('auth_api.register') }}" method="post">
+	<form id="login-form" action="{{ url_for('auth_api.mainpage') }}" method="post">
 		<p>
 		<input type="text" id="email" name="email" placeholder="Email" required><i class="validation"><span></span><span></span></i>
 		</p>
