--- a/templates/register.html
+++ b/templates/register.html
@@ -10,7 +10,9 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-
+<div> 
+	<p class="welcome">WELCOME TO NBA DATABASE</p>
+</div>
 	<div id="login-form-wrap">
 	<h2>Sign Up</h2>
 	<form id="login-form" action="{{ url_for('auth_api.register') }}" method="post">
