--- a/templates/gameDetail.html
+++ b/templates/gameDetail.html
@@ -7,8 +7,29 @@
 </head>
  
 <body>
-    <!-- data -->
-    <h3>GameDetail, {{GameDetail}}</h3>
+    <table>
+		<tr>
+		  <th>comment</th>
+		  <th>minute</th>
+		  <th>nickName</th>
+		  <th>city</th>
+		  <th>startingPosition</th>
+		  <th>gameID</th>
+		</tr>
+		<tr>
+
+		  <td>{{ GameDetail.comment }}</td>
+		  <td>{{ GameDetail.minute }}</td>
+		  <td>{{ GameDetail.nickName }}</td>
+		  <td>{{ GameDetail.city }}</td>
+		  <td>{{ GameDetail.startingPosition }}</td>
+		  <td>{{ GameDetail.gameID }}</td>
+
+		</tr>
+
+        </a>
+
+	</table>
 </body>
  
 </html>
