get_back button add

--- a/templates/gameDetail.html
+++ b/templates/gameDetail.html
@@ -3,7 +3,14 @@
 <html>
  
 <head>
-    <title>FlaskTest</title>
+    <title>Game Detail</title>
+	<link rel="stylesheet" href="tables.css">
+    <link rel="icon" type="image/x-icon" href="nba.ico">
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 </head>
  
 <body>
@@ -30,6 +37,7 @@
         </a>
 
 	</table>
+	<button onclick="goBack()">Go Back</button>
 </body>
  
 </html>
