--- a/templates/player.html
+++ b/templates/player.html
@@ -3,7 +3,14 @@
 <html>
  
 <head>
-    <title>FlaskTest</title>
+    <title>Player</title>
+	<link rel="stylesheet" href="tables.css">
+    <link rel="icon" type="image/x-icon" href="nba.ico">
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 </head>
  
 <body>
@@ -32,6 +39,7 @@
 	
 	  </table>
     <!-- data -->
+	<button onclick="goBack()">Go Back</button>
 </body>
  
 </html>
