--- a/templates/stat.html
+++ b/templates/stat.html
@@ -3,7 +3,14 @@
 <html>
  
 <head>
-    <title>FlaskTest</title>
+    <title>Stat</title>
+	<link rel="stylesheet" href="tables.css">
+    <link rel="icon" type="image/x-icon" href="nba.ico">
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 </head>
  
 <body>
@@ -34,7 +41,7 @@
             <td>{{ stat.id }}</td>
 		</tr>
 	</table>
-	
+	<button onclick="goBack()">Go Back</button>
    <!-- data -->
 </body>
  
