--- a/templates/games.html
+++ b/templates/games.html
@@ -3,7 +3,14 @@
 <html>
  
 <head>
-    <title>FlaskTest</title>
+    <title>Games</title>
+	<link rel="stylesheet" href="tables.css">
+    <link rel="icon" type="image/x-icon" href="nba.ico">
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 </head>
  
 <body>
@@ -40,6 +47,7 @@
 
     <!-- data -->
     <h3>games, {{games}}</h3>
+	<button onclick="goBack()">Go Back</button>
 </body>
  
 </html>
