--- a/templates/stats.html
+++ b/templates/stats.html
@@ -3,7 +3,14 @@
 <html>
  
 <head>
-    <title>FlaskTest</title>
+    <title>Stats</title>
+	<link rel="stylesheet" href="tables.css">
+    <link rel="icon" type="image/x-icon" href="nba.ico">
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 </head>
  
 <body>
@@ -40,7 +47,7 @@
 	 </table>
  	 <h3>stats, {{stats}}</h3>
   <!-- data -->
-   
+  <button onclick="goBack()">Go Back</button>
 </body>
  
 </html>
