--- a/templates/team.html
+++ b/templates/team.html
@@ -3,7 +3,14 @@
 <html>
  
 <head>
-    <title>FlaskTest</title>
+    <title>Team</title>
+	<link rel="stylesheet" href="tables.css">
+    <link rel="icon" type="image/x-icon" href="nba.ico">
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 </head>
  
 <body>
@@ -38,7 +45,7 @@
   </table>
  
     <!-- data -->
-   
+    <button onclick="goBack()">Go Back</button>
 </body>
  
 </html>
