--- a/templates/tables.css
+++ b/templates/tables.css
@@ -7,7 +7,7 @@ button {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    position : fixed;
+    position : absolute;
     top : 5%;
     right : 5%;
   }
