--- a/templates/teams.html
+++ b/templates/teams.html
@@ -4,7 +4,21 @@
  
 <head>
     <title>Teams</title>
-	<link rel="stylesheet" href="tables.css">
+	<style> 
+	button {
+		background-color: #4CAF50; /* Green */
+		border: none;
+		color: white;
+		padding: 10px 24px;
+		text-align: center;
+		text-decoration: none;
+		display: inline-block;
+		font-size: 12px;
+		position : absolute;
+		top : 2.5%;
+		right : 2.5%;
+	  }
+	  </style>
     <link rel="icon" type="image/x-icon" href="nba.ico">
     <script>
         function goBack() {
