--- a/templates/game_create.html
+++ b/templates/game_create.html
@@ -17,7 +17,19 @@
             position : absolute;
             top : 2.5%;
             right : 2.5%;
-          }
+        }
+        table {
+            border-collapse: collapse;
+            width: 90%;
+        }
+
+        th, td {
+            padding: 8px;
+            text-align: left;
+            border-bottom: 1px solid #ddd;
+        }
+
+        tr:hover {background-color: coral;}
           </style>
     <link rel="icon" type="image/x-icon" href="nba.ico">
     <script>
