--- a/templates/gameDetails.html
+++ b/templates/gameDetails.html
@@ -18,6 +18,18 @@
             top : 2.5%;
             right : 2.5%;
           }
+          table {
+            border-collapse: collapse;
+            width: 90%;
+        }
+
+        th, td {
+            padding: 8px;
+            text-align: left;
+            border-bottom: 1px solid #ddd;
+        }
+
+        tr:hover {background-color: coral;}
           </style>
     <link rel="icon" type="image/x-icon" href="nba.ico">
     <script>
