player, game html changes

--- a/templates/players.html
+++ b/templates/players.html
@@ -43,10 +43,11 @@
     <table>
 		<tr>
 		  <th>playerName</th>
-		  <th>position</th>
+		  <!--<th>position</th>-->
 		  <th>age</th>
 		  <th>leauge</th>
 		  <th>experince</th>
+		  <!-- <th>team</th> -->
 		  <th>teamID</th>
 		  <th>seasonID</th>
 		</tr>
@@ -59,9 +60,10 @@
 		  <td>{{ player.age }}</td>
 		  <td>{{ player.leauge }}</td>
 		  <td>{{ player.experince }}</td>
+		  <!-- <td>{{ player.team }}</td> -->
 		  <td>{{ player.teamID }}</td>
 		  <td>{{ player.seasonID }}</td>
-          <td>{{ player.id }}</td>
+          <!-- <td>{{ player.id }}</td> -->
 
 		</tr>
 		{% endfor %}
