--- a/templates/team.html
+++ b/templates/team.html
@@ -66,7 +66,7 @@
 	    <td>{{ Team.seasonID }}</td>
     	<td>{{ Team.id }}</td>
 		<td><a href="http://127.0.0.1:5000/api/player/get/team/{{Team.abbreviation}}">players </a></td>
-		<td><a href="http://127.0.0.1:5000/api/player/get/team/{{Team.abbreviation}}">games </a></td>
+		<td><a href="http://127.0.0.1:5000/api/game/get/{{Team.abbreviation}}">games </a></td>
 	</tr>
   </table>
  
