--- a/templates/player.html
+++ b/templates/player.html
@@ -43,7 +43,7 @@
     <table>
 		<tr>
 		  <th>playerName</th>
-		  <th>position</th>
+		  <!--<th>position</th>-->
 		  <th>age</th>
 		  <th>leauge</th>
 		  <th>experince</th>
