--- a/templates/team.html
+++ b/templates/team.html
@@ -52,7 +52,6 @@
 	    <th>seasonID</th>
   		<th>id</th>
 		<th>players</th>
-		<th>games</th>
 
 
 	</tr>
@@ -66,7 +65,7 @@
 	    <td>{{ Team.seasonID }}</td>
     	<td>{{ Team.id }}</td>
 		<td><a href="http://127.0.0.1:5000/api/player/get/team/{{Team.abbreviation}}">players </a></td>
-		<td><a href="http://127.0.0.1:5000/api/game/get/{{Team.abbreviation}}">games </a></td>
+		<!-- <td><a href="http://127.0.0.1:5000/api/game/get/{{Team.abbreviation}}">games </a></td> -->
 	</tr>
   </table>
  
