session and logout added

--- a/templates/main.html
+++ b/templates/main.html
@@ -66,6 +66,10 @@
 				</form>
 			</h2>
 		</div>
+    
+    <!-- Logout Button -->
+    <a href="http://127.0.0.1:5000/api/auth/logout"><button>logout</button></a>
+
 		</div>
 	</body>
 </html>
