--- a/templates/main.html
+++ b/templates/main.html
@@ -23,7 +23,7 @@
                     <div class="msg"> You can make your team with any player in any team in any season. </div>
                     <br>
 					<div class="dropdown">
-                        <button class="dropbtn">Season</button>
+                        <button class="dropbtn">Season of Teams</button>
                         <div class="dropdown-content">
                           <a href="http://127.0.0.1:5000/api/team/get/season/2022">2022</a>
                           <a href="http://127.0.0.1:5000/api/team/get/season/2021">2021</a>
@@ -35,34 +35,22 @@
 
               
                         </div>
-                    </div>
+          </div>
+          <div class="dropdown">
+            <button class="dropbtn">Season of Games</button>
+            <div class="dropdown-content">
+              <a href="http://127.0.0.1:5000/api/game/get/season/2022">2022</a>
+              <a href="http://127.0.0.1:5000/api/game/get/season/2021">2021</a>
+              <a href="http://127.0.0.1:5000/api/game/get/season/2020">2020</a>
+              <a href="http://127.0.0.1:5000/api/game/get/season/2019">2019</a>
+              <a href="http://127.0.0.1:5000/api/game/get/season/2018">2018</a>
+              <a href="http://127.0.0.1:5000/api/game/get/season/2017">2017</a>
+              <a href="http://127.0.0.1:5000/api/game/get/season/2016">2016</a>
 
-                    <div class="dropdown">
-                        <button class="dropbtn">Teams</button>
-                        <div class="dropdown-content">
-                          <a href="#">'Link 1'</a>
-                          <a href="#">Link 2</a>
-                          <a href="#">Link 3</a>
-                        </div>
-                    </div>
+  
+            </div>
+</div>
 
-                    <div class="dropdown">
-                        <button class="dropbtn">Games</button>
-                        <div class="dropdown-content">
-                          <a href="#">Link 1</a>
-                          <a href="#">Link 2</a>
-                          <a href="#">Link 3</a>
-                        </div>
-                    </div>
-
-                    <div class="dropdown">
-                        <button class="dropbtn">Players</button>
-                        <div class="dropdown-content">
-                          <a href="#">Link 1</a>
-                          <a href="#">Link 2</a>
-                          <a href="#">Link 3</a>
-                        </div>
-                    </div>
 				</form>
 			</h2>
 		</div>
