--- a/templates/players.html
+++ b/templates/players.html
@@ -70,6 +70,7 @@
 	  </table>
     <h3>Players, {{Players}}</h3>
 	<button onclick="goBack()">Go Back</button>
+	<a href="http://127.0.0.1:5000/api/auth/logout"><button>logout</button></a>
 </body>
  
 </html>
