--- a/templates/games.html
+++ b/templates/games.html
@@ -5,7 +5,7 @@
 <head>
     <title>Games</title>
 	<style> 
-		button {
+		.go_back_button {
 			background-color: #4CAF50; /* Green */
 			border: none;
 			color: white;
@@ -18,6 +18,21 @@
 			top : 2.5%;
 			right : 2.5%;
 		  }
+
+		  .logout{
+			background-color: red ; /* Green */
+			border: none;
+			color: white;
+			padding: 10px 24px;
+			text-align: center;
+			text-decoration: none;
+			display: inline-block;
+			font-size: 12px;
+			position : absolute;
+			top : 10%;
+			right : 2.5%;
+		  }
+
 		  table {
             border-collapse: collapse;
             width: 90%;
@@ -73,7 +88,8 @@
 
     <!-- data -->
     <h3>games, {{games}}</h3>
-	<button onclick="goBack()">Go Back</button>
+	<button class="go_back_button" onclick="goBack()">Go Back</button>
+	<a href="http://127.0.0.1:5000/api/auth/logout"><button class="logout">Log out</button></a>
 </body>
  
 </html>
