--- a/templates/main.html
+++ b/templates/main.html
@@ -18,9 +18,9 @@
 			</div></br></br>
 			<h2 class="word">
 				<form>
-                    <div class = "add-button"><button class="button button1">Add Player to Your Team</button></div>
-					<div class="msg"> You can select your season, team or player. </div>
-                    <div class="msg"> You can make your team with any player in any team in any season. </div>
+                    <!-- <div class = "add-button"><button class="button button1">Add Player to Your Team</button></div> -->
+					<div class="msg"> You can select your season </div>
+                    <div class="msg"> You can see the team in the season or you can see the games in the season. </div>
                     <br>
 					<div class="dropdown">
                         <button class="dropbtn">Season of Teams</button>
@@ -37,7 +37,7 @@
                         </div>
           </div>
           <div class="dropdown">
-            <button class="dropbtn">Season of Games</button>
+            <button style="background-color: coral;" class="dropbtn">Season of Games</button>
             <div class="dropdown-content">
               <a href="http://127.0.0.1:5000/api/game/get/season/2022">2022</a>
               <a href="http://127.0.0.1:5000/api/game/get/season/2021">2021</a>
@@ -56,7 +56,7 @@
 		</div>
     
     <!-- Logout Button -->
-    <a href="http://127.0.0.1:5000/api/auth/logout"><button>logout</button></a>
+	<a href="http://127.0.0.1:5000/api/auth/logout"><button class="logout">Log out</button></a>
 
 		</div>
 	</body>
