--- a/static/mainpage.css
+++ b/static/mainpage.css
@@ -40,7 +40,7 @@
       }
   
   .logout{
-    background-color: red ; /* Green */
+    background-color: red ;
     border: none;
     color: white;
     padding: 10px 24px;
