--- a/templates/players.html
+++ b/templates/players.html
@@ -31,7 +31,7 @@
 			position : absolute;
 			top : 10%;
 			right : 2.5%;
-		  }
+		}
 
 		table {
             border-collapse: collapse;
@@ -84,8 +84,8 @@
 		{% endfor %}
 	  </table>
     <h3>Players, {{Players}}</h3>
-	<button onclick="goBack()">Go Back</button>
-	<a href="http://127.0.0.1:5000/api/auth/logout"><button>logout</button></a>
+	<button class="go_back_button" onclick="goBack()">Go Back</button>
+	<a href="http://127.0.0.1:5000/api/auth/logout"><button class="logout">Log out</button></a>
 </body>
  
 </html>
