--- a/templates/player.html
+++ b/templates/player.html
@@ -58,7 +58,7 @@
     <table>
 		<tr>
 		  <th>playerName</th>
-		  <!--<th>position</th>-->
+		  <th>position</th>
 		  <th>age</th>
 		  <th>leauge</th>
 		  <th>experince</th>
@@ -68,6 +68,7 @@
 		</tr>
 		<tr>
 		  <td>{{ Player.playerName }}</td>
+		  <td>{{ Player.position}}</td>
 		  <td>{{ Player.age }}</td>
 		  <td>{{ Player.leauge }}</td>
 		  <td>{{ Player.experince }}</td>
