--- a/templates/players.html
+++ b/templates/players.html
@@ -58,7 +58,7 @@
     <table>
 		<tr>
 		  <th>playerName</th>
-		  <!--<th>position</th>-->
+		  <th>position</th>
 		  <th>age</th>
 		  <th>leauge</th>
 		  <th>experince</th>
