--- a/templates/main.html
+++ b/templates/main.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='mainpage.css') }}">		
     <link rel="stylesheet" href = "mainpage.css">
         <link rel="icon" type="image/x-icon" href="nba.ico">		
+        <style> body{ background-image: url("background.jpg");background-size: 100% 100%;  } </style>
 	</head>
 	<body></br></br></br></br></br>
 
