--- a/templates/main.html
+++ b/templates/main.html
@@ -6,9 +6,9 @@
         
 		<title> NBA Database </title>
     <link rel="stylesheet" href="{{ url_for('static', filename='mainpage.css') }}">		
-    <link rel="stylesheet" href = "mainpage.css">
-        <link rel="icon" type="image/x-icon" href="nba.ico">		
-        <style> body{ background-image: url("background.jpg");background-size: 100% 100%;  } </style>
+    <style> body{ background-image:url('static/background.jpg');background-size: 100% 100%;  } </style>
+    
+        <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='nba.ico') }}">		
 	</head>
 	<body></br></br></br></br></br>
 
