--- a/static/mainpage.css
+++ b/static/mainpage.css
@@ -52,3 +52,8 @@
     top : 10%;
     right : 2.5%;
     } 
+  
+  .body{ 
+    background-image: url("background.jpg");
+    background-size: 100% 100%;  
+  } 
