--- a/templates/main.html
+++ b/templates/main.html
@@ -5,11 +5,12 @@
 		<meta charset="UTF-8">
         
 		<title> NBA Database </title>
+    
     <link rel="stylesheet" href="{{ url_for('static', filename='mainpage.css') }}">		
-    <link rel="stylesheet" href = "mainpage.css">
-        <link rel="icon" type="image/x-icon" href="nba.ico">		
-        <style> body{ background-image: url("background.jpg");background-size: 100% 100%;  } </style>
-	</head>
+    
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='nba.ico') }}">		
+	
+  </head>
 	<body></br></br></br></br></br>
 
 		<div align="center">
@@ -48,8 +49,21 @@
               <a href="http://127.0.0.1:5000/api/game/get/season/2017">2017</a>
               <a href="http://127.0.0.1:5000/api/game/get/season/2016">2016</a>
 
-  
             </div>
+
+            <div class="dropdown">
+              <button style="background-color: cyan;" class="dropbtn">All Star</button>
+              <div class="dropdown-content">
+                <a href="http://127.0.0.1:5000/api/endofseason/get/season/2022">2022</a>
+                <a href="http://127.0.0.1:5000/api/endofseason/get/season/2021">2021</a>
+                <a href="http://127.0.0.1:5000/api/endseason/get/season/2020">2020</a>
+                <a href="http://127.0.0.1:5000/api/endofseason/get/season/2019">2019</a>
+                <a href="http://127.0.0.1:5000/api/endofseason/get/season/2018">2018</a>
+                <a href="http://127.0.0.1:5000/api/endofseason/get/season/2017">2017</a>
+                <a href="http://127.0.0.1:5000/api/endofseason/get/season/2016">2016</a>
+
+    
+              </div>
 </div>
 
 				</form>
