encoding and icon

--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
   <title>NBA Database</title>
   <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"> -->
   <link rel="stylesheet" href="{{ url_for('static', filename='login.css') }}">		
-<link rel="icon" type="image/x-icon" href="nba.ico">
+  <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='nba.ico') }}">	
 
 </head>
 <body>
