--- a/templates/players.html
+++ b/templates/players.html
@@ -4,6 +4,7 @@
  
 <head>
     <title>Players</title>
+	<link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='nba.ico') }}">	
 	<style> 
 		.go_back_button {
 			background-color: #4CAF50; /* Green */
