--- a/templates/endOfseasons.html
+++ b/templates/endOfseasons.html
@@ -3,7 +3,8 @@
 <html>
  
 <head>
-    <title>Stats</title>
+    <title>All Star</title>
+	<link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='nba.ico') }}">	
 	<style> 
 		.go_back_button {
 			background-color: #4CAF50; /* Green */
