--- a/templates/game_create.html
+++ b/templates/game_create.html
@@ -4,6 +4,7 @@
  
 <head>
     <title>Game Create</title>
+	<link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='nba.ico') }}">	
     <style> 
         .go_back_button {
 			background-color: #4CAF50; /* Green */
