--- a/templates/main.html
+++ b/templates/main.html
@@ -31,7 +31,7 @@
                     <div class="msg"> You can see the team in the season or you can see the games in the season. </div>
                     <br>
 					<div class="dropdown">
-                        <button class="dropbtn">Season of Teams</button>
+                <button class="dropbtn">Teams of Season</button>
                         <div class="dropdown-content">
                           <a href="http://127.0.0.1:5000/api/team/get/season/2022">2022</a>
                           <a href="http://127.0.0.1:5000/api/team/get/season/2021">2021</a>
@@ -44,8 +44,9 @@
               
                         </div>
           </div>
+
           <div class="dropdown">
-            <button style="background-color: coral;" class="dropbtn">Season of Games</button>
+            <button style="background-color: coral;" class="dropbtn">Games of Season</button>
             <div class="dropdown-content">
               <a href="http://127.0.0.1:5000/api/game/get/season/2021">2021</a>
               <a href="http://127.0.0.1:5000/api/game/get/season/2020">2020</a>
@@ -54,10 +55,12 @@
               <a href="http://127.0.0.1:5000/api/game/get/season/2017">2017</a>
               <a href="http://127.0.0.1:5000/api/game/get/season/2016">2016</a>
 
-            </div>
-
-            <div class="dropdown">
-              <button style="background-color: cyan;" class="dropbtn">All Star</button>
+            
+            </div> 
+          
+          </div>
+          <div class="dropdown">
+              <button style="background-color: darkgoldenrod;" class="dropbtn">All Star of Season</button>
               <div class="dropdown-content">
                 <a href="http://127.0.0.1:5000/api/endofseason/get/season/2022">2022</a>
                 <a href="http://127.0.0.1:5000/api/endofseason/get/season/2021">2021</a>
@@ -68,6 +71,7 @@
 
     
               </div>
+            </div>
 </div>
 
 				</form>
