--- a/templates/player.html
+++ b/templates/player.html
@@ -33,6 +33,26 @@
 			top : 10%;
 			right : 2.5%;
 		  }
+		.delete{
+			background-color: yellow ; /* Green */
+			border: none;
+			color: white;
+			padding: 10px 24px;
+			text-align: center;
+			text-decoration: none;
+			display: inline-block;
+			font-size: 12px;
+		  }
+		.update{
+			background-color: blue; /* Green */
+			border: none;
+			color: white;
+			padding: 10px 24px;
+			text-align: center;
+			text-decoration: none;
+			display: inline-block;
+			font-size: 12px;
+		  }
 
 		table {
             border-collapse: collapse;
@@ -84,6 +104,8 @@
     <!-- data -->
 	<button class="go_back_button" onclick="goBack()">Go Back</button>
 	<a href="http://127.0.0.1:5000/api/auth/logout"><button class="logout">Log out</button></a>
+	<a href="http://127.0.0.1:5000/api/player/delete"><button class="delete">Delete</button></a>
+	<a href="http://127.0.0.1:5000/api/player/update"><button class="update">Update</button></a>
 </body>
  
 </html>
