player delete button

--- a/templates/player.html
+++ b/templates/player.html
@@ -84,6 +84,9 @@
     <!-- data -->
 	<button class="go_back_button" onclick="goBack()">Go Back</button>
 	<a href="http://127.0.0.1:5000/api/auth/logout"><button class="logout">Log out</button></a>
+	<a href="http://127.0.0.1:5000/api/player/delete/{{ Player.id }}"><button class="delete">Delete</button></a>
+	<a href="http://127.0.0.1:5000/api/player/update/{{ Player.id }}"><button class="delete">Update</button></a>
+
 </body>
  
 </html>
