--- a/templates/players.html
+++ b/templates/players.html
@@ -61,8 +61,8 @@
 		  <th>playerName</th>
 		  <th>position</th>
 		  <th>age</th>
-		  <th>leauge</th>
-		  <th>experince</th>
+		  <th>league</th>
+		  <th>experience</th>
 		  <!-- <th>team</th> -->
 		  <th>teamID</th>
 		  <th>seasonID</th>
@@ -74,8 +74,8 @@
 			<td><a href="http://127.0.0.1:5000/api/player/get/{{player.id}}">{{ player.playerName }}</a></td>
 		  <td>{{ player.position }}</td>
 		  <td>{{ player.age }}</td>
-		  <td>{{ player.leauge }}</td>
-		  <td>{{ player.experince }}</td>
+		  <td>{{ player.league }}</td>
+		  <td>{{ player.experience }}</td>
 		  <!-- <td>{{ player.team }}</td> -->
 		  <td>{{ player.teamID }}</td>
 		  <td>{{ player.seasonID }}</td>
