--- a/templates/main.html
+++ b/templates/main.html
@@ -80,6 +80,7 @@
     
     <!-- Logout Button -->
 	<a href="http://127.0.0.1:5000/api/auth/logout"><button class="logout">Log out</button></a>
+  <a style="color: white; position: absolute; bottom: 2.5%; right: 2.5%;" href = "https://youtu.be/Eg0mxPXIpLY"> For the Greatest of All Time</a>
 
 		</div>
 	</body>
